--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -17,7 +17,7 @@
 }
 
 .button--primary:hover {
-  filter: brightness(120%);
+  filter: brightness(105%);
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.55);
 }
 
