--- a/scss/pages/_menu.scss
+++ b/scss/pages/_menu.scss
@@ -60,9 +60,15 @@
           gap: 5px;
           flex-direction: column;
           padding-left: 15px;
-          overflow: hidden;
-          white-space: nowrap;
           text-overflow: ellipsis;
+          overflow: hidden;
+
+          & h4,
+          p {
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+          }
         }
 
         &__price {
